# microservice-template

./: CMakeLists.txt  README.md
src/: check.cpp  check.h  database.cpp  database.h  main.cpp  server.cpp  server.h
